# RitmoDaForma_PI

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENCE  docker-compose.yml  heroku-backend.yml  heroku.yml  railway.json  readme.md
.github/workflows/: sync.yml
backend/: Dockerfile.backend  README.md  pyproject.toml  requirements.txt
backend/core/: settings.py
backend/src/: main.py  manage.py  runserver.py
backend/src/app/: main.py
backend/src/app/apps/users/: crud.py
backend/src/app/core/: database.py
backend/src/app/models/: classes.py  company_contacts.py  gym_plans.py  users.py  videos.py
backend/src/app/schemas/: classes.py  company_contacts.py  gym_plans.py  users.py  videos.py
backend/src/app/utils/: database_conn.py  hash.py  validations.py
backend/src/apps/login/: crud.py  schemas.py  views.py
backend/src/apps/videos/: schemas.py  views.py
backend/src/core/: routers.py  settings.py
frontend/: .prettierrc  Dockerfile.frontend  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1730897170473-8faee8da948a5.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/components/Aulas/: PriceTableStyles.ts
frontend/src/components/global/: Navbar.tsx  NavbarStyles.ts
frontend/src/contexts/: ModalProvider.tsx  ModalProviderStyles.ts
frontend/src/pages/Aulas/: Aulas.tsx  AulasStyle.ts
frontend/src/pages/Home/: Home.tsx  HomeStyles.ts
frontend/src/redux/: store.ts
frontend/src/styles/: Breakpoints.ts  GlobalStyles.ts  Theme.ts
frontend/src/types/: types.ts
(+181 files in other folders)
