[tool.poetry]
name = "backend-dependencies"
version = "0.1.0"
description = "Dependencies necessary to carry out the project."
authors = ["RuanCarlosSilva <143547755+ruansilva123@users.noreply.github.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
supabase = "^2.10.0"
pydantic = "^2.9.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
